--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -100,6 +100,12 @@
                 style="?android:preferenceInformationStyle"
                 android:title="@string/firmware_version"
                 android:summary="@string/device_info_default"/>
+
+        <!-- Tranquility version -->
+        <Preference android:key="tranq_version"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/tranq_version"
+                android:summary="@string/tranq_version_default" />
                 
         <!-- Device Baseband version -->
         <Preference android:key="baseband_version" 
@@ -118,5 +124,6 @@
                 style="?android:preferenceInformationStyle"
                 android:title="@string/build_number"
                 android:summary="@string/device_info_default"/>
+
 
 </PreferenceScreen>
