--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -57,33 +57,22 @@
         android:fragment="com.android.settings.WirelessSettings"
         android:icon="@drawable/empty_icon" />
 
-
-
-
-
-
-
-
-
     <!-- CUSTOMIZE -->
     <header android:title="@string/header_category_customize" />
-  
-    <!-- STATUSBAR -->
+
+    <!-- Statusbar -->
     <header
         android:id="@+id/statusbar_settings"
         android:icon="@drawable/ic_settings_tranquility"
-        android:fragment="com.android.settings.CustomSettings"
+        android:fragment="com.android.settings.SoundSettings"
         android:title="@string/statusbar_settings" />
-	
 
-
-
-
-
-
-
-
-
+    <!-- Toolbox -->
+    <header
+        android:id="@+id/toolbox_settings"
+        android:icon="@drawable/ic_settings_tophat"
+        android:fragment="com.android.settings.SoundSettings"
+        android:title="@string/toolbox_settings" />
 
 
     <!-- DEVICE -->
