Missings strings Wrong call for statusbar settings

--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -64,7 +64,7 @@
     <header
         android:id="@+id/statusbar_settings"
         android:icon="@drawable/ic_settings_tranquility"
-        android:fragment="com.android.settings.SoundSettings"
+        android:fragment="com.android.settings.CustomSettings"
         android:title="@string/statusbar_settings" />
 
     <!-- Toolbox -->
