--- a/res/xml/custom_toggle_settings.xml
+++ b/res/xml/custom_toggle_settings.xml
@@ -34,6 +34,7 @@
 		android:defaultValue="false"	/>
 		
 	<com.android.settings.ColorPickerPreference 
+		android:layout="?android:attr/preferenceLayoutChild"
 		android:dependency="toggle_show_indicator"
 		android:key="toggle_ind_on_color"
 		android:title="Toggle On Indicator Color"
@@ -41,7 +42,8 @@
 		android:defaultValue="#ffffbb33" 
 		alphaSlider="false" /> 
 		
-	<com.android.settings.ColorPickerPreference 
+	<com.android.settings.ColorPickerPreference
+		android:layout="?android:attr/preferenceLayoutChild" 
 		android:dependency="toggle_show_indicator"
 		android:key="toggle_ind_off_color"
 		android:title="Toggle Off Indicator Color"
@@ -58,6 +60,7 @@
 		android:defaultValue="false" />
 
 	<com.android.settings.ColorPickerPreference 
+		android:layout="?android:attr/preferenceLayoutChild"
 		android:dependency="toggle_show_text"
 		android:key="toggle_text_on_color"
 		android:title="Toggle Text On Color"
@@ -66,6 +69,7 @@
 		alphaSlider="false" />
 
 	<com.android.settings.ColorPickerPreference 
+		android:layout="?android:attr/preferenceLayoutChild"
 		android:dependency="toggle_show_text"
 		android:key="toggle_text_off_color"
 		android:title="Toggle Text Off Color"
@@ -81,6 +85,7 @@
 		android:defaultValue="true"	/>
 
 	<com.android.settings.ColorPickerPreference 
+		android:layout="?android:attr/preferenceLayoutChild"
 		android:dependency="toggle_show_divider"
 		android:key="toggle_divider_color"
 		android:title="Toggle Divider Color"
