--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -72,16 +72,13 @@
     <!-- CUSTOMIZE -->
     <header android:title="Customize" />
 
-<<<<<<< HEAD
-    <!-- Most Tranquility Custom Settings -->
-=======
+
     <!-- Most of Tranquility Custom Settings -->
->>>>>>> dj
     <header
         android:id="@+id/custom_settings"
         android:icon="@drawable/ic_settings_tranquility"
         android:fragment="com.android.settings.CustomSettings"
-        android:title="Statusbar Settings" />
+        android:title="TranquilIce Settings" />
 
     <!-- Toolbox -->
     <header
