--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -605,6 +605,7 @@
     <!-- Titles for window animation scale preference. [CHAR LIMIT=35] -->
     <string-array name="window_animation_scale_entries">
         <item>Animation off</item>
+        <item>Animation scale .25x</item>
         <item>Animation scale .5x</item>
         <item>Animation scale 1x</item>
         <item>Animation scale 1.5x</item>
@@ -616,6 +617,7 @@
     <!-- Values for window animation scale preference. -->
     <string-array name="window_animation_scale_values" translatable="false" >
         <item>0</item>
+        <item>.25</item>
         <item>.5</item>
         <item>1</item>
         <item>1.5</item>
@@ -627,6 +629,7 @@
     <!-- Titles for transition animation scale preference. [CHAR LIMIT=35] -->
     <string-array name="transition_animation_scale_entries">
         <item>Animation off</item>
+        <item>Animation scale .25x</item>
         <item>Animation scale .5x</item>
         <item>Animation scale 1x</item>
         <item>Animation scale 1.5x</item>
@@ -638,6 +641,7 @@
     <!-- Values for transition animation scale preference. -->
     <string-array name="transition_animation_scale_values" translatable="false" >
         <item>0</item>
+        <item>.25</item>
         <item>.5</item>
         <item>1</item>
         <item>1.5</item>
