--- a/res/xml/custom_pulldown_settings.xml
+++ b/res/xml/custom_pulldown_settings.xml
@@ -25,7 +25,7 @@
 		android:summaryOn="Show the carrier in the pulldown"
 		android:summaryOff="Do not show the carrier in the pulldown"
 		android:title="Show Carrier" 
-		android:defaultValue="false"	/>
+		android:defaultValue="true"	/>
    				
 	<com.android.settings.ColorPickerPreference 
 		android:layout="?android:attr/preferenceLayoutChild"
@@ -33,7 +33,7 @@
 		android:key="carrier_color"
 		android:title="Carrier Text Color"
 		android:summary="Color for the carrier text"
-		android:defaultValue="#ffffffff" 
+		android:defaultValue="#ff33b5e5" 
 		alphaSlider="false" /> 
    				
 	<Preference 
@@ -60,7 +60,7 @@
 		android:summary="Change the text for the carrier"
 		android:dialogTitle="Carrier Text"
 		android:dialogMessage="Enter text"	
-		android:defaultValue="T r a n Q u i l   I c e" />
+		android:defaultValue="Tranquil Ice" />
 
 	<com.android.settings.ColorPickerPreference 
 		android:key="date_color"
