--- a/res/layout/dialog_color_picker.xml
+++ b/res/layout/dialog_color_picker.xml
@@ -39,7 +39,7 @@
 		android:layout_below="@id/color_picker_view"
 		android:layout_marginBottom="10dp">
 
-		<net.margaritov.preference.colorpicker.ColorPickerPanelView
+		<com.android.settings.ColorPickerPanelView
 			android:id="@+id/old_color_panel"
 			android:layout_width="0px"
 			android:layout_height="fill_parent"
