--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -80,6 +80,14 @@
             <intent android:action="android.settings.SAFETY" />
         </PreferenceScreen>
 
+
+        <PreferenceScreen android:key="changelog"
+                android:title="@string/changelog_full_title">
+            <intent android:action="android.intent.action.MAIN"
+                    android:targetPackage="com.android.settings"
+                    android:targetClass="com.android.settings.About" />
+        </PreferenceScreen>
+
         <!-- Contributors -->
         <!-- 
         <PreferenceScreen
@@ -106,6 +114,12 @@
                 style="?android:preferenceInformationStyle"
                 android:title="@string/tranq_version"
                 android:summary="@string/tranq_version_default" />
+
+        <!-- Rom build date -->
+        <Preference android:key="build_date"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/build_date"
+                android:summary="@string/build_date_default" />
                 
         <!-- Device Baseband version -->
         <Preference android:key="baseband_version" 
@@ -119,11 +133,11 @@
                 android:title="@string/kernel_version"
                 android:summary="@string/device_info_default"/>
 
-        <!-- Detailed build version -->
+        <!-- Detailed build version 
         <Preference android:key="build_number" 
                 style="?android:preferenceInformationStyle"
                 android:title="@string/build_number"
                 android:summary="@string/device_info_default"/>
-
+-->
 
 </PreferenceScreen>
