--- a/res/xml/custom_statusbar_settings.xml
+++ b/res/xml/custom_statusbar_settings.xml
@@ -36,7 +36,7 @@
 		android:title="Clock am/pm" 
 		android:defaultValue="false"	/>
    				
-	<net.margaritov.preference.colorpicker.ColorPickerPreference
+	<com.android.settings.ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild"
 	    android:dependency="show_clock"
 		android:key="clock_color"
